* Added core controller * Added about headlet with splash screen

--- a/core/locale/core.xml
+++ b/core/locale/core.xml
@@ -73,6 +73,7 @@
 		<label index="role.attr.active">Active</label>
 		<label index="role.attr.persons">Role Members</label>
 		<label index="headlet.ajaxloader.label">Synchronizing data with webserver</label>
+		<label index="headlet.about.label">About todoyu</label>
 	</labels>
 	<labels lang="de">
 		<label index="tab.todoyu.label">todoyu</label>
@@ -147,6 +148,7 @@
 		<label index="role.attr.active">Aktiv</label>
 		<label index="role.attr.persons">Rollenmitglieder</label>
 		<label index="headlet.ajaxloader.label">Synchronisiere Daten mit dem Webserver</label>
+		<label index="headlet.about.label">Über todoyu</label>
 	</labels>
 	<labels lang="pt">
 		<label index="tab.todoyu.label">todoyu</label>
@@ -221,5 +223,6 @@
 		<label index="role.attr.active">Active</label>
 		<label index="role.attr.persons">Membros do Grupo</label>
 		<label index="headlet.ajaxloader.label">Synchronizing data with webserver</label>
+		<label index="headlet.about.label">Sobre todoyu</label>
 	</labels>
 </locallang>
