--- a/install/locale/installer.xml
+++ b/install/locale/installer.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <locallang>
-	<labels lang="en">
+	<labels lang="en_GB">
 		<label index="panelWidget.title.progress">Steps of Installation</label>
 		<label index="type.install">todoyu Installation</label>
 		<label index="type.update">todoyu Update</label>
@@ -34,9 +34,9 @@
 		<label index="dbconnection.step">Setup Database Connection</label>
 		<label index="dbselect.title">Select Database</label>
 		<label index="dbselect.button">Save Database Setup</label>
-		<label index="dbselect.text">Please Select an Existing Database or Create a new one for todoyu</label>
+		<label index="dbselect.text">Please select an existing database or create a new one for todoyu</label>
 		<label index="dbselect.text.saved">Database Connection Saved</label>
-		<label index="dbselect.text.notCreated">Cannot Create new Database on Server</label>
+		<label index="dbselect.text.notCreated">Cannot Create New Database On Server</label>
 		<label index="dbselect.text.dbNameExists">A Database With This Name Already Exists</label>
 		<label index="dbselect.selectDB">Select a Database</label>
 		<label index="dbselect.orCreateDB">or Create new:</label>
@@ -58,7 +58,7 @@
 		<label index="systemconfig.locale">Locale</label>
 		<label index="systemconfig.timezone">Timezone</label>
 		<label index="systemconfig.text">Select Your todoyu System Settings</label>
-		<label index="systemconfig.text.error">Please Enter a System Name and Email</label>
+		<label index="systemconfig.text.error">Please Enter A System Name And Email Address</label>
 		<label index="systemconfig.step">System Configuration</label>
 		<label index="adminaccount.title">Create Administrator Account</label>
 		<label index="adminaccount.email">Administrator Email</label>
@@ -98,10 +98,10 @@
 		<label index="updatetocurrentversion.changedColumns">Modified Columns</label>
 		<label index="updatetocurrentversion.missingKeys">Missing Table Keys (Indexes)</label>
 		<label index="finishupdate.title">Finish Update</label>
-		<label index="finishupdate.text">Installer has Updated Your todoyu Installation</label>
+		<label index="finishupdate.text">Installer has updated your todoyu installation</label>
 		<label index="finishupdate.step">Finish Installation</label>
 	</labels>
-	<labels lang="de">
+	<labels lang="de_DE">
 		<label index="panelWidget.title.progress">Installationsschritte</label>
 		<label index="type.install">todoyu Installation</label>
 		<label index="type.update">todoyu Aktualisierung</label>
