--- a/install/locale/installer.xml
+++ b/install/locale/installer.xml
@@ -4,10 +4,10 @@
 		<label index="panelWidget.title.progress">Steps of Installation</label>
 		<label index="type.install">todoyu Installation</label>
 		<label index="type.update">todoyu Update</label>
-		<label index="language.title">Select Installation Language</label>
-		<label index="language.selectthislanguage">Install todoyu in english</label><!-- name of the current locale language -->
-		<label index="language.text">Please choose the language used for the installation process:</label>
-		<label index="language.step">Select Installation Language</label>
+		<label index="locale.title">Select Installation Language</label>
+		<label index="locale.selectthislocale">Install todoyu in english</label><!-- name of the current locale language -->
+		<label index="locale.text">Please choose the language used for the installation process:</label>
+		<label index="locale.step">Select Installation Language</label>
 		<label index="license.eula">End User License Agreement for todoyu</label>
 		<label index="license.lgpl">The Following Third Party Libraries are Licensed Under LGPL v2.1</label>
 		<label index="license.title">License Agreement</label>
@@ -55,7 +55,7 @@
 		<label index="systemconfig.name">System Name</label>
 		<label index="systemconfig.email">System Email</label>
 		<label index="systemconfig.language">Language</label>
-		<label index="systemconfig.locale">Locale</label>
+		<label index="systemconfig.locale">Language (Country)</label>
 		<label index="systemconfig.timezone">Timezone</label>
 		<label index="systemconfig.text">Select Your todoyu System Settings</label>
 		<label index="systemconfig.text.error">Please Enter A System Name And Email Address</label>
@@ -105,10 +105,10 @@
 		<label index="panelWidget.title.progress">Installationsschritte</label>
 		<label index="type.install">todoyu Installation</label>
 		<label index="type.update">todoyu Aktualisierung</label>
-		<label index="language.title">Installationssprache Wählen</label>
-		<label index="language.selectthislanguage">toyou auf Deutsch installieren</label><!-- name of the current locale language -->
-		<label index="language.text">Bitte wählen Sie eine Sprache für den Installationsvorgang:</label>
-		<label index="language.step">Installationssprache Wählen</label>
+		<label index="locale.title">Installationssprache Wählen</label>
+		<label index="locale.selectthislocale">Installiere todoyu auf Deutsch </label><!-- name of the current locale language -->
+		<label index="locale.text">Bitte wählen Sie eine Sprache für den Installationsvorgang:</label>
+		<label index="locale.step">Installationssprache Wählen</label>
 		<label index="license.eula">Benutzer-Vereinbarung für todoyu</label>
 		<label index="license.lgpl">Folgende Dritt-Bibliotheken sind unter LGPL v2.1 lizensiert</label>
 		<label index="license.title">todoyu Installer</label>
@@ -156,7 +156,7 @@
 		<label index="systemconfig.name">System-Name</label>
 		<label index="systemconfig.email">System-Email</label>
 		<label index="systemconfig.language">Sprache</label>
-		<label index="systemconfig.locale">Region</label>
+		<label index="systemconfig.locale">Sprache (Land)</label>
 		<label index="systemconfig.timezone">Zeitzone</label>
 		<label index="systemconfig.text">todoyu System-Einstellungen vornehmen</label>
 		<label index="systemconfig.text.error">Bitte System-Name und -Email angeben</label>
@@ -201,5 +201,8 @@
 		<label index="finishupdate.step">Installation abschliessen</label>
 		<label index="finishupdate.title">Aktualisieren beenden</label>
 		<label index="finishupdate.text">Der Installer hat Ihre todoyu Installation aktualisiert</label>
+	</labels>
+	<labels lang="pt_BR">
+		<label index="locale.selectthislocale">Instale todoyu em português</label>
 	</labels>
 </locallang>
