--- a/install/locale/installer.xml
+++ b/install/locale/installer.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <locallang>
 	<labels lang="en_GB">
-		<label index="panelWidget.title.progress">Steps of Installation</label>
+		<label index="panelWidget.title.progress">Steps Of Installation</label>
 		<label index="type.install">todoyu Installation</label>
 		<label index="type.update">todoyu Update</label>
 		<label index="locale.title">Select Installation Language</label>
-		<label index="locale.selectthislocale">Install todoyu in english</label><!-- name of the current locale language -->
+		<label index="locale.selectthislocale">Install todoyu in English</label><!-- name of the current locale language -->
 		<label index="locale.text">Please choose the language used for the installation process:</label>
 		<label index="locale.step">Select Installation Language</label>
-		<label index="license.eula">End User License Agreement for todoyu</label>
-		<label index="license.lgpl">The Following Third Party Libraries are Licensed Under LGPL v2.1</label>
-		<label index="license.title">License Agreement</label>
-		<label index="license.button">I Accept, Install todoyu</label>
-		<label index="license.text">Welcome to the todoyu Installer!</label>
+		<label index="license.eula">End user licence agreement for todoyu</label>
+		<label index="license.lgpl">The following third party libraries are licenced under LGPL v2.1</label>
+		<label index="license.title">Licence Agreement</label>
+		<label index="license.button">I accept, install todoyu</label>
+		<label index="license.text">Welcome to the todoyu installer!</label>
 		<label index="license.step">todoyu Licence</label>
 		<label index="servercheck.title">Server Check</label>
 		<label index="servercheck.button">Setup Database Configuration</label>
@@ -23,34 +23,34 @@
 		<label index="servercheck.writableCheck">Folders / Files Writable</label>
 		<label index="servercheck.writable">writable</label>
 		<label index="servercheck.notWritable">NOT WRITABLE</label>
-		<label index="servercheck.ready">Server is Ready for todoyu 2.0</label>
-		<label index="servercheck.notReady">Server is NOT Ready for todoyu 2.0</label>
+		<label index="servercheck.ready">Server is ready for todoyu 2.0</label>
+		<label index="servercheck.notReady">Server is NOT ready for todoyu 2.0</label>
 		<label index="servercheck.step">Server Check</label>
-		<label index="dbconnection.title">Setup Database Server Connection</label>
+		<label index="dbconnection.title">Setup database server connection</label>
 		<label index="dbconnection.button">Update Database Configuration</label>
 		<label index="dbconnection.server">Server</label>
 		<label index="dbconnection.username">Username</label>
 		<label index="dbconnection.password">Password</label>
-		<label index="dbconnection.text">Enter Your Database Connection Data</label>
+		<label index="dbconnection.text">Enter your database connection data</label>
 		<label index="dbconnection.step">Setup Database Connection</label>
 		<label index="dbselect.title">Select Database</label>
 		<label index="dbselect.button">Save Database Setup</label>
 		<label index="dbselect.text">Please select an existing database or create a new one for todoyu</label>
 		<label index="dbselect.text.saved">Database Connection Saved</label>
-		<label index="dbselect.text.notCreated">Cannot Create New Database On Server</label>
-		<label index="dbselect.text.dbNameExists">A Database With This Name Already Exists</label>
-		<label index="dbselect.selectDB">Select a Database</label>
-		<label index="dbselect.orCreateDB">or Create new:</label>
+		<label index="dbselect.text.notCreated">Cannot create new database on server</label>
+		<label index="dbselect.text.dbNameExists">A database wIth this name already exists</label>
+		<label index="dbselect.selectDB">Select a database</label>
+		<label index="dbselect.orCreateDB">or create a new one:</label>
 		<label index="dbselect.dbEmpty">Empty</label>
 		<label index="dbselect.dbNotEmpty">Not Empty</label>
 		<label index="dbselect.tables">tables</label>
 		<label index="dbselect.step">Select Database</label>
-		<label index="importtables.title">Import Databe Tables</label>
+		<label index="importtables.title">Import Database Tables</label>
 		<label index="importtables.button">Import Database Tables</label>
 		<label index="importtables.coretables">TODOYU CORE DATABASE TABLES</label>
 		<label index="importtables.exttables">TODOYU EXTENSIONS DATABASE TABLES</label>
-		<label index="importtables.text">Import Basic todoyu Tables</label>
-		<label index="importtables.step">Import Database Tables</label>
+		<label index="importtables.text">Import basic todoyu tables</label>
+		<label index="importtables.step">Import todoyu database tables</label>
 		<label index="systemconfig.title">System Configuration</label>
 		<label index="systemconfig.button">Save System Configuration</label>
 		<label index="systemconfig.name">System Name</label>
@@ -58,35 +58,35 @@
 		<label index="systemconfig.language">Language</label>
 		<label index="systemconfig.locale">Language (Country)</label>
 		<label index="systemconfig.timezone">Timezone</label>
-		<label index="systemconfig.text">Select Your todoyu System Settings</label>
-		<label index="systemconfig.text.error">Please Enter A System Name And Email Address</label>
+		<label index="systemconfig.text">Select your todoyu system settings</label>
+		<label index="systemconfig.text.error">Please enter a system name and email address</label>
 		<label index="systemconfig.step">System Configuration</label>
 		<label index="adminaccount.title">Create Administrator Account</label>
 		<label index="adminaccount.email">Administrator Email</label>
 		<label index="adminaccount.button">Create Administrator Account</label>
 		<label index="adminaccount.companyname">Company Name</label>
-		<label index="adminaccount.adminfirstname">Administrator Firstname</label>
-		<label index="adminaccount.adminlastname">Administrator Lastname</label>
+		<label index="adminaccount.adminfirstname">Administrator First Name</label>
+		<label index="adminaccount.adminlastname">Administrator Last Name</label>
 		<label index="adminaccount.username">Username</label>
 		<label index="adminaccount.password">Password</label>
 		<label index="adminaccount.repeatPassword">Repeat Password</label>
-		<label index="adminaccount.passwordHint">at least 5 Characters</label>
+		<label index="adminaccount.passwordHint">at least 5 characters</label>
 		<label index="adminaccount.text">Please enter the data for your administrator account</label>
 		<label index="adminaccount.step">Create Administrator Account</label>
 		<label index="adminaccount.error">Please check the given account data</label>
 		<label index="importdemodata.title">Import Demo Data</label>
-		<label index="importdemodata.checkboxlabel">Import the Demo Data</label>
+		<label index="importdemodata.checkboxlabel">Import the demo data</label>
 		<label index="importdemodata.button">Next Step</label>
-		<label index="importdemodata.text">You can import the demo data to start testing right after you logged in. Without the demo data, you have a clean installation which you can customize to your needs.</label>
-		<label index="importdemodata.contains">Contains: Projects, Tasks, Addresses, Companies, Comments, Feedbacks, Roles, Worktypes, Filters and More.</label>
+		<label index="importdemodata.text">You can import the demo data to start testing right after you logged in. Without the demo data, you have a fresh and clean installation which you can customize to your needs.</label>
+		<label index="importdemodata.contains">Contains: Projects, Tasks, Addresses, Companies, Comments, Feedback, Roles, Work Types, Filters and More.</label>
 		<label index="importdemodata.step">Import Demo Data</label>
 		<label index="finish.title">Finish Installation</label>
 		<label index="finish.text">Finish Installation</label>
-		<label index="finish.button">Disable Installer and Go to Login</label>
+		<label index="finish.button">Disable installer and go to login. This might take some time because we now prepare the localizations, cache the JS, CSS and do some more magic...</label>
 		<label index="finish.step">Finish Installation</label>
 		<label index="update.title">todoyu Version Update</label>
 		<label index="update.button">Start Update</label>
-		<label index="update.info">Apply Database Changes for Your Current Version and Compare Current Columns with File Configuration</label>
+		<label index="update.info">Apply database changes for your current version and compare current columns with file configuration</label>
 		<label index="update.step">Update todoyu Installation</label>
 		<label index="updatetocurrentversion.title">Update Database</label>
 		<label index="updatetocurrentversion.button">Apply Database Changes</label>
@@ -97,7 +97,7 @@
 		<label index="updatetocurrentversion.newTables">New Tables</label>
 		<label index="updatetocurrentversion.newColumns">New Columns</label>
 		<label index="updatetocurrentversion.changedColumns">Modified Columns</label>
-		<label index="updatetocurrentversion.missingKeys">Missing Table Keys (Indexes)</label>
+		<label index="updatetocurrentversion.missingKeys">Missing table keys (indexes)</label>
 		<label index="finishupdate.title">Finish Update</label>
 		<label index="finishupdate.text">Installer has updated your todoyu installation</label>
 		<label index="finishupdate.step">Finish Installation</label>
